--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
+    "react-screen-orientation": "0.0.3",
     "react-scripts": "2.1.8",
     "reactstrap": "^8.0.0",
     "redux": "^4.0.1",
