--- a/manifest.json
+++ b/manifest.json
@@ -9,8 +9,7 @@
     }
   ],
   "start_url": ".",
-  "display": "browser",
+  "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff",
-  "orientation": "portrait-primary"
+  "background_color": "#ffffff"
 }
