--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-orientation": "^1.0.4",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
     "react-screen-orientation": "0.0.3",
